--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,20 @@
 
 /* Base-styles */
 .bodyimg {
+    font-size: 20px;
    font-family:Quicksand, Arial, Helvetica, sans-serif;
    background-image: linear-gradient(to bottom, #e2d1c3,#fdfcfb);
    color:black;
    line-height:1.5;
-   letter-spacing:0.1rem;
+   letter-spacing :0.05rem;
+   hyphens: auto;
+}
+main {
+    flex: 1;
 }
 nav ul li{
     font-size:1.5em;
-    text-transform: uppercase;
+
     padding: 5px;
 }
 li {
@@ -20,14 +25,25 @@ a {
     text-decoration: none;
 }
 
-h1,h3,h4 {
-    font-family: 'Comfortaa', Arial, Helvetica, sans-serif;
-    font-weight: bolder;
+nav ul li, h1,h2,h3, .final-content p{
+    text-transform: uppercase;
 }
+
+h1,h3 {
+    font-family: 'Comfortaa', Arial, Helvetica, sans-serif;
+    font-weight: 700;
+}
+    
 
 /* main styles */
 
-.header-nav, .nav-list, .intro-content,.main-content{
+.header-nav, 
+.nav-list,
+ .intro-content,
+ .main-content,
+ .footer-content,
+ .final-content,
+ .contact-details{
     display:flex;
     flex-direction:column;
     flex-wrap: wrap;
@@ -38,28 +54,120 @@ h1,h3,h4 {
     align-items: center;    
 }
 
-
-header {
+header, .intro-content img {
     order:-1;
 }
-
-.intro-content {
-   flex-direction: row;
-   justify-content: space-around;
+.nav-list{
+    padding-left:20px;
 }
+.nav-list li {
+    align-self: center;
+}
+
+.intro-content{
+    justify-content: space-around;
+} 
+
+.intro-content,.contact-details p:last-child{
+    padding-bottom:3rem;
+}
+
 .intro-content img {
-   order:-1;
-   max-width:450px;
+   max-width:250px;
    border-radius:10px;
 }
 
-.main-content {
-    align-items: center;
+ .intro-content, .final-content{
+  flex-direction: row;
+}
+
+.main-content, .footer-content {
+  align-items: center;
     
 }
 
 .main-content p:last-child, .header-nav, .intro-content p{
-    padding: 2rem;
+   padding: 1rem 1.5rem;
+   align-self: center;
 }
 
-.main-content img {max-width: 250px;}
+.main-content p:last-child, .header-nav, .intro-content p, .contact-details p:last-child{
+    margin-top:auto;
+}
+
+.main-content img {
+    max-width:350px;
+}
+
+.footer-content {
+   padding:1rem 2rem;
+}
+
+.footer-content ul {
+  display: none;
+}
+
+.final-content {
+  width:100%;
+}
+.final-content h4 {
+   flex-grow:4;
+}
+
+.final-content{
+    border-top: 1px grey dotted;
+}
+
+.intro-content p ,.main-content p:last-child {
+    padding-left:2.3rem;
+}
+
+/* media querries */
+@media screen and (min-width:768px) {
+    .nav-list{
+        flex-direction: row;
+        margin-top:0;
+        font-size:1rem;
+    }
+
+   #portfolio,#contact{
+        font-size:1.5rem;
+    }
+    .intro-content img {
+        width:300px;
+        flex-basis:280px;
+        order: 1;
+        flex:2;
+        padding-right:1em;
+        object-fit: contain;
+    }
+  
+    .intro-content p{
+        flex:1;
+    }
+
+    .portfolio-pt{
+        display: flex;
+       flex-direction: row;
+    }
+    
+    .footer-content p {
+        max-width:600px;
+     
+    }
+
+    .final-content p {
+        display:none;
+    }
+    
+    .final-content ul{
+        display:flex;
+        text-transform: uppercase;
+    }
+
+    .final-content li {
+     padding:0.5rem;
+     font-size:1rem;
+    }
+
+}
