--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
    color:black;
    line-height:1.5;
    letter-spacing :0.05rem;
-   hyphens: auto;
+   hyphens: auto; 
 }
 main {
     flex: 1;
@@ -24,6 +24,9 @@ li {
 a {
     text-decoration: none;
 }
+li a:hover {
+    color: rgb(158, 49, 9);
+   }
 
 nav ul li, h1,h2,h3, .final-content p{
     text-transform: uppercase;
@@ -34,7 +37,6 @@ h1,h3 {
     font-weight: 700;
 }
     
-
 /* main styles */
 
 .header-nav, 
@@ -43,7 +45,8 @@ h1,h3 {
  .main-content,
  .footer-content,
  .final-content,
- .contact-details{
+ .contact-details,
+ .main-port{
     display:flex;
     flex-direction:column;
     flex-wrap: wrap;
@@ -73,22 +76,29 @@ header, .intro-content img {
 }
 
 .intro-content img {
-   max-width:250px;
-   border-radius:10px;
+   width:350px;
+   border-radius:20%;
 }
 
  .intro-content, .final-content{
   flex-direction: row;
 }
 
-.main-content, .footer-content {
+#portfolio {
+    display:flex;
+    justify-content: space-around;
+
+}
+
+.main-content,.main-port, .footer-content {
   align-items: center;
     
 }
 
+
 .main-content p:last-child, .header-nav, .intro-content p{
    padding: 1rem 1.5rem;
-   align-self: center;
+  
 }
 
 .main-content p:last-child, .header-nav, .intro-content p, .contact-details p:last-child{
@@ -118,9 +128,6 @@ header, .intro-content img {
     border-top: 1px grey dotted;
 }
 
-.intro-content p ,.main-content p:last-child {
-    padding-left:2.3rem;
-}
 
 /* media querries */
 @media screen and (min-width:768px) {
@@ -133,24 +140,30 @@ header, .intro-content img {
    #portfolio,#contact{
         font-size:1.5rem;
     }
+    .intro-content{
+        flex-wrap: nowrap;
+    }
     .intro-content img {
         width:300px;
-        flex-basis:280px;
         order: 1;
-        flex:2;
         padding-right:1em;
         object-fit: contain;
     }
-  
-    .intro-content p{
-        flex:1;
+
+    .intro-content p {
+       max-width:800px;
+       font-size: 20px;
     }
 
-    .portfolio-pt{
+ 
+  
+    .main-content{
         display: flex;
-       flex-direction: row;
+        flex-direction: row;
     }
-    
+    .main-port{
+        flex:1 250px;
+    }
     .footer-content p {
         max-width:600px;
      
@@ -169,5 +182,39 @@ header, .intro-content img {
      padding:0.5rem;
      font-size:1rem;
     }
+    
+}
+
+@media screen and (min-width:1024px) {
+   .header-nav{
+       flex-direction: row;
+       justify-content: space-between;
+   }
+
+   .intro-content{
+       justify-content: center;
+   }
+    
+   .intro-content img{
+       width:400px;
+   }    
+  
+   .intro-content p {
+    margin-top: 0;
+    padding-top: 0.2rem;
+    font-size: 1.5rem;
+    max-width:450px;
+   }
+
+
+   .main-port img{
+       width:300px;
+   }
+
+   .main-content{
+       max-width:1000px;
+       margin:auto;
+   }
 
 }
+
